# schemap

./: README.md  pyproject.toml  zensical.toml
docs/: api.md  development.md  examples.md  index.md  mixins.md  tutorial.md
src/autoschema/: builder.py  types.py
src/autoschema/utils/: likeness.py  mapping.py  schema.py
src/schemap/: __init__.py
src/schemap/mixins/: __init__.py  softdelete.py  timestamps.py
tests/: test_mixins.py
