[project]
name = "schemap"
version = "0.5.2"
description = "Automatic Pydantic Schemas for SQLAlchemy models"
readme = "README.md"
requires-python = ">=3.12.7"
authors = [
    { name = "Emiliano Gandini Outeda", email = "emiliano.gandini@protonmail.com" }
]
license = "MIT"
keywords = [
  "python",
  "schemas",
  "models",
  "orm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "cached-classproperty>=1.1.0",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
docs = ["zensical"]

[project.urls]
Homepage = "https://github.com/emiliano-gandini-outeda/schemap"
Repository = "https://github.com/emiliano-gandini-outeda/schemap"
Issues = "https://github.com/emiliano-gandini-outeda/schemap/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "examples*"]
